--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -85,7 +85,8 @@ p {
 	display: flex;
 	justify-content: center;
 	text-align: center;
-	margin: 30px 0;
+	margin: 30px auto;
+	max-width: 80%;
 }
 
 .about-paragraphs p {
@@ -110,4 +111,26 @@ p {
 
 .app-heading {
 	margin-bottom: 16px;
+}
+
+@media (max-width: 420px) {
+	h1 {
+		font-size: 50px;
+	}
+	h2 {
+		font-size: 40px;
+		text-align: center;
+	}
+	h3 {
+		font-size: 25px;
+	}
+	.project-link {
+		display: flex;
+		justify-content: center;
+		margin-left: 20px;
+		margin-right: 20px;
+	}
+	p {
+		text-align: center;
+	}
 }
